[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/Fonts/BalsamiqSans-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/Project/UI/MoveBox.gd" type="Script" id=2]
[ext_resource path="res://src/Assets/Enemies/test.png" type="Texture" id=3]
[ext_resource path="res://src/Project/UI/QuickRepair.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=3]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[node name="QuickRepair" type="Node2D"]
script = ExtResource( 4 )

[node name="LeftComponent" type="Node2D" parent="."]
position = Vector2( 40, 30 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="LeftComponent"]
visible = false
position = Vector2( 0, 10 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="LeftComponent"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.533333, 0.305882, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scales" type="Sprite" parent="LeftComponent"]
visible = false
modulate = Color( 0.85098, 1, 0, 1 )
position = Vector2( 29.1352, 10.6001 )
scale = Vector2( 0.172295, 0.172295 )
texture = ExtResource( 3 )

[node name="Name" type="Label" parent="LeftComponent"]
margin_left = -38.2001
margin_top = -19.1893
margin_right = 1.79987
margin_bottom = 4.81073
custom_fonts/font = SubResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="LeftComponent"]
margin_left = -38.2001
margin_top = -3.1893
margin_right = 1.79987
margin_bottom = 20.8107
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="LeftComponent"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="LeftComponent"]
visible = false
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 39.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uses" type="ProgressBar" parent="LeftComponent"]
visible = false
margin_left = -40.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="LeftComponent/Uses"]
margin_right = 79.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightComponent" type="Node2D" parent="."]
position = Vector2( 240, 30 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="RightComponent"]
visible = false
position = Vector2( 0, 10 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="RightComponent"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.533333, 0.305882, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scales" type="Sprite" parent="RightComponent"]
visible = false
modulate = Color( 0.85098, 1, 0, 1 )
position = Vector2( 29.1352, 10.6001 )
scale = Vector2( 0.172295, 0.172295 )
texture = ExtResource( 3 )

[node name="Name" type="Label" parent="RightComponent"]
margin_left = -38.2001
margin_top = -19.1893
margin_right = 1.79987
margin_bottom = 4.81073
custom_fonts/font = SubResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="RightComponent"]
margin_left = -38.2001
margin_top = -3.1893
margin_right = 1.79987
margin_bottom = 20.8107
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="RightComponent"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="RightComponent"]
visible = false
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 39.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uses" type="ProgressBar" parent="RightComponent"]
visible = false
margin_left = -40.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="RightComponent/Uses"]
margin_right = 79.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Weapon" type="Node2D" parent="."]
position = Vector2( 140, 30 )
script = ExtResource( 2 )
canMove = false

[node name="Sprite" type="Sprite" parent="Weapon"]
visible = false
position = Vector2( 0, 10 )
texture = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Weapon"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
color = Color( 0.533333, 0.305882, 0.305882, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scales" type="Sprite" parent="Weapon"]
visible = false
modulate = Color( 0.85098, 1, 0, 1 )
position = Vector2( 29.1352, 10.6001 )
scale = Vector2( 0.172295, 0.172295 )
texture = ExtResource( 3 )

[node name="Name" type="Label" parent="Weapon"]
margin_left = -38.2001
margin_top = -19.1893
margin_right = 1.79987
margin_bottom = 4.81073
custom_fonts/font = SubResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="Label" parent="Weapon"]
margin_left = -38.2001
margin_top = -3.1893
margin_right = 1.79987
margin_bottom = 20.8107
custom_fonts/font = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ReferenceRect" type="ReferenceRect" parent="Weapon"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 40.0
border_color = Color( 1, 1, 1, 1 )
editor_only = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="Weapon"]
margin_left = -40.0
margin_top = -20.0
margin_right = 40.0
margin_bottom = 39.0
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Uses" type="ProgressBar" parent="Weapon"]
visible = false
margin_left = -40.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="Weapon/Uses"]
margin_right = 79.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 2 )
text = "1/1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tooltip" type="Node2D" parent="Weapon"]
visible = false
position = Vector2( 0, 185 )
z_index = 5

[node name="Background" type="ColorRect" parent="Weapon/Tooltip"]
margin_left = -120.0
margin_top = -160.0
margin_right = 120.0
margin_bottom = -25.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inside" type="ColorRect" parent="Weapon/Tooltip"]
margin_left = -117.0
margin_top = -157.0
margin_right = 117.0
margin_bottom = -28.0
color = Color( 0.458824, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Weapon/Tooltip"]
margin_left = -112.0
margin_top = -157.0
margin_right = 113.0
margin_bottom = -22.0
custom_fonts/font = SubResource( 4 )
text = "aaaaaaaaaaaaaa"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftButton" type="Button" parent="."]
margin_right = 140.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "       >"
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RightButton" type="Button" parent="."]
margin_left = 141.0
margin_right = 280.0
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "<       "
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LeftComponent/Button" to="LeftComponent" method="_on_Button_pressed"]
[connection signal="pressed" from="RightComponent/Button" to="RightComponent" method="_on_Button_pressed"]
[connection signal="pressed" from="Weapon/Button" to="Weapon" method="_on_Button_pressed"]
[connection signal="mouse_entered" from="LeftButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="LeftButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="mouse_entered" from="RightButton" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="RightButton" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="RightButton" to="." method="_on_RightButton_pressed"]
